--- a/_posts/2016-8-31-Web-PCN6.md
+++ b/_posts/2016-8-31-Web-PCN6.md
@@ -8,9 +8,9 @@ title: Веб-интерфейс к пожарно-охранной систем
 - Легкий и быстрый веб-интерфейс (в сравнении со стандартным веб-интерфейсом)
 - Разграничение объектов по операторам (групповой доступ)
 - Разграничение обрабатываемых тревог по операторам (возможно выделить отдельно пожарные/охранные тревоги)
-- Двойная авторизация: по ssl-сертификаты и по логину/паролю
+- Двойная авторизация: по SSL-сертификату и по логину/паролю
 - Частичное управление пользователями через административный интерфейс
-- Оператор только на просмотр
+- Оператор — только просмотр
 - AJAX-обновление
 - Информирование о недоступности **InetServer**
  
@@ -40,7 +40,7 @@ title: Веб-интерфейс к пожарно-охранной систем
 ![_config.yml]({{ site.baseurl }}/images/pcn_screen/2.png)
 
 
-#### Описание объект
+#### Описание объекта
 
 [Нажмите сюда для увеличения]({{ site.baseurl }}/images/pcn_screen/3.png)
 ![_config.yml]({{ site.baseurl }}/images/pcn_screen/3.png)
