--- a/_posts/2018-08-16-devopshq.md
+++ b/_posts/2018-08-16-devopshq.md
@@ -3,13 +3,13 @@ layout: post
 title: DevOpsHQ
 ---
 
-[DevOpsHQ](https://devopshq.github.io) — это небольшой проект нескольких DevOps-разработчиков, где мы выкладываем инструменты, которыми пользуемся в нашей повседневной работе. Все инструменты под MIT-лицензией. Будем очень рады, если вы захотите поддержать нас своими коммитами! Контрибьютером может стать любой желающий :)
+[DevOpsHQ](https://devopshq.github.io) — это небольшой проект нескольких DevOps-разработчиков, где мы выкладываем инструменты, которыми пользуемся в нашей повседневной работе. Все инструменты под MIT-лицензией. Будем очень рады, если вы захотите поддержать нас своими коммитами! Контрибьютором может стать любой желающий :)
 
 Поддерживаемые проекты:
-* [dohq-teamcity](https://devopshq.github.io/teamcity) — python package providing access to the JetBrains TeamCity server API.
-* [dohq-tfs](https://devopshq.github.io/tfs/) — python client for Microsoft Team Foundation Server API.
-* [dohq-artifactory](https://devopshq.github.io/artifactory/) — python client for JFrog Artifactory API.
-* [crosspm](http://devopshq.github.io/crosspm/) — cross-platform package manager (c\c++ oriented).
-* [dohq-youtrack](https://devopshq.github.io/youtrack/) — python client for JetBrains YouTrack API.
+* [dohq-teamcity](https://devopshq.github.io/teamcity) — Python package providing access to the JetBrains TeamCity server API.
+* [dohq-tfs](https://devopshq.github.io/tfs/) — Python client for Microsoft Team Foundation Server API.
+* [dohq-artifactory](https://devopshq.github.io/artifactory/) — Python client for JFrog Artifactory API.
+* [crosspm](http://devopshq.github.io/crosspm/) — cross-platform package manager (C/C++ oriented).
+* [dohq-youtrack](https://devopshq.github.io/youtrack/) — Python client for JetBrains YouTrack API.
 
 По любым вопросам можно обратиться к админам проекта: [Alexander Pazdnikov](https://github.com/apazdnikov), [Timur Gilmullin](https://github.com/Tim55667757) и [Aleksey Burov](https://github.com/orgs/devopshq/people/allburov). 
