--- a/_posts/2025-09-12-whoami.md
+++ b/_posts/2025-09-12-whoami.md
@@ -6,6 +6,7 @@ title: Привет, меня зовут Алексей! 👋
 В ИТ — 15 лет, 10 лет занимаюсь разработкой ПО.
 
 Решаю разные задачи:
+- **Разрабатываю решения с нуля**. Админки, интеграции, платежные системы, боты.
 - **Добавляю функции в устаревшие программы**. Расширяю существующие системы — когда разработчики ушли, компания развалилась, но программы продолжают использоваться.
 - **Настрою процессы непрерывной интеграции, тестирования и доставки обновлений** до заказчиков — у меня большой опыт в DevOps и администрировании.
 - **Настрою систему мониторинга** — при ошибках она попытается восстановить всё сама. Если не получится — будет звонить вам ночью, пока вы не проснётесь (или мне).
