--- a/_posts/2025-09-12-whoami.md
+++ b/_posts/2025-09-12-whoami.md
@@ -3,9 +3,9 @@ layout: post
 title: Привет, меня зовут Алексей! 👋
 ---
 
-В ИТ — 15 лет, 10 лет занимаюсь разработкой ПО.
+В ИТ — 15 лет, 10 лет занимаюсь разработкой ПО. 💻
 
-Решаю разные задачи:
+🛠️ От идеи до релиза:
 - **Разрабатываю решения с нуля**. Админки, интеграции, платежные системы, боты.
 - **Добавляю функции в устаревшие программы**. Расширяю существующие системы — когда разработчики ушли, компания развалилась, но программы продолжают использоваться.
 - **Настрою процессы непрерывной интеграции, тестирования и доставки обновлений** до заказчиков — у меня большой опыт в DevOps и администрировании.
@@ -13,7 +13,7 @@ title: Привет, меня зовут Алексей! 👋
 - **Работаю на стыке железа и ПО** — когда с помощью кода нужно сделать что‑то в реальном мире.
 - **Пишу библиотеки**. Если для нужного вам сервиса нет библиотеки или нужных функций — напишу.
 
-**Разработка под ключ**:
+👉 **Разработка под ключ**:
 1. Разберём вашу задачу.
 2. Подберём решение по карману.
 3. Напишем сервис или подберём готовое решение.
