--- a/_posts/2025-09-12-about.md
+++ b/_posts/2025-09-12-about.md
@@ -5,15 +5,15 @@ title: Привет! 👋
 
 # Я — Алексей. Разрабатываю веб-сервисы и интеграции
 
-В ИТ — 15 лет, 10 лет занимаюсь разработкой ПО. 💻
+15 лет в ИТ, 10 — в разработке ПО: от идеи до работающего проекта. 💻
 
 ## 🛠️ Чем занимаюсь
 
 * **Разработка с нуля** — админки, интеграции, платежи, боты.
-* **Расширение легаси** — добавляю функции там, где исходные авторы уже недоступны.
-* **CI/CD и DevOps** — настраиваю сборку, тесты и доставку обновлений.
-* **Система мониторинга** — пытается чиниться сама; если нет — позвонит вам ночью, пока не проснётесь (или мне).
+* **Расширение старых программ** — добавляю функции там, где исходные авторы уже недоступны.
 * **Проекты на стыке железа и ПО** — код, который делает вещи в реальном мире.
+* **Процессы разработки** — настраиваю сборку, тесты и доставку обновлений.
+* **Система мониторинга** — пытается чиниться сама; если нет — позвонит вам ночью, пока не проснётесь (или мне).
 * **Пишу библиотеки** — если для нужного сервиса нет SDK или функции, я её добавлю.
 
 ## 👉 Как работаю
