--- a/_posts/2025-09-12-about.md
+++ b/_posts/2025-09-12-about.md
@@ -14,7 +14,7 @@ title: Привет! 👋
 * **Проекты на стыке железа и ПО** — код, который делает вещи в реальном мире.
 * **Процессы разработки** — настраиваю сборку, тесты и доставку обновлений.
 * **Система мониторинга** — пытается чиниться сама; если нет — позвонит вам ночью, пока не проснётесь (или мне).
-* **Пишу библиотеки** — если для нужного сервиса нет SDK или функции, я её добавлю.
+* **Пишу open-source библиотеки** — если для нужного сервиса нет SDK или функции, я её добавлю.
 
 ## 👉 Как работаю
 
