--- a/_posts/2025-09-12-about.md
+++ b/_posts/2025-09-12-about.md
@@ -25,3 +25,6 @@ title: Привет! 👋
 5. Сопровождаю и слежу за стабильностью.
 
 Говорю на языке бизнеса и не перегружаю терминами — слово «маршрутизация» не прозвучит, пока вы сами не попросите. 😊
+
+Пролистайте ниже — там проекты, статьи и доклады 👇
+
