--- a/_posts/2025-01-01-about.md
+++ b/_posts/2025-01-01-about.md
@@ -16,13 +16,13 @@ title: Привет! 👋
 * **Система мониторинга** — пытается чиниться сама; если нет — позвонит вам ночью, пока не проснётесь (или мне).
 * **Пишу open-source библиотеки** — если для нужного сервиса нет SDK или функции, я её добавлю.
 
-## 👉 Как работаю
+## 👉 Как проходит проект
 
-1. Разбираем задачу и ограничения.
-2. Предлагаю несколько вариантов «по карману».
-3. Либо пишем сервис, либо выбираем готовое решение.
-4. Готовлю инструкции, обучаю команду.
-5. Сопровождаю и слежу за стабильностью.
+1. Разбираем проблему и ограничения.
+2. Предлагаем несколько вариантов «по карману».
+3. Пишем сервис или выбираем готовое решение.
+4. Готовим инструкции, обучаем команду.
+5. Сопровождаем и следим за стабильностью.
 
 Говорю на языке бизнеса и не перегружаю терминами — слово «маршрутизация» не прозвучит, пока вы сами не попросите. 😊
 
