--- a/_posts/2025-01-01-about.md
+++ b/_posts/2025-01-01-about.md
@@ -21,7 +21,7 @@ title: Привет! 👋
 1. Разбираем проблему и ограничения.
 2. Предлагаем несколько вариантов «по карману».
 3. Пишем сервис или выбираем готовое решение.
-4. Готовим инструкции, обучаем команду.
+4. Готовим инструкции, обучаем людей.
 5. Сопровождаем и следим за стабильностью.
 
 Говорю на языке бизнеса и не перегружаю терминами — слово «маршрутизация» не прозвучит, пока вы сами не попросите. 😊
