--- a/_posts/2025-01-01-about.md
+++ b/_posts/2025-01-01-about.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Привет! 👋
+highlight: true
 ---
 
 # Я — Алексей. Разрабатываю веб-сервисы и интеграции
@@ -27,4 +28,3 @@ title: Привет! 👋
 Говорю на языке бизнеса и не перегружаю терминами — слово «маршрутизация» не прозвучит, пока вы сами не попросите. 😊
 
 Пролистайте ниже — там проекты, статьи и доклады 👇
-
