--- a/_posts/2025-01-01-about.md
+++ b/_posts/2025-01-01-about.md
@@ -4,7 +4,9 @@ title: Привет! 👋
 highlight: true
 ---
 
-# Я — Алексей. Разрабатываю веб-сервисы и интеграции
+## Меня зовут Алексей
+
+Разрабатываю веб-сервисы и интеграции.
 
 15 лет в ИТ, 10 — в разработке ПО: от идеи до работающего проекта. 💻
 
