--- a/_posts/2025-01-07-project.md
+++ b/_posts/2025-01-07-project.md
@@ -5,11 +5,13 @@ highlight: true
 title_clickable: false
 ---
 
-1. Разбираем проблему и ограничения.
-2. Предлагаем несколько вариантов «по карману».
-3. Пишем сервис или выбираем готовое решение.
-4. Готовим инструкции, обучаем людей.
-5. Сопровождаем и следим за стабильностью.
+<div class="step-flow" role="list" aria-label="Как проходит проект">
+  <div class="step" role="listitem">Разбираем проблему и ограничения.</div>
+  <div class="step" role="listitem">Предлагаем несколько вариантов «по карману».</div>
+  <div class="step" role="listitem">Пишем сервис или выбираем готовое решение.</div>
+  <div class="step" role="listitem">Готовим инструкции, обучаем людей.</div>
+  <div class="step" role="listitem">Сопровождаем и следим за стабильностью.</div>
+</div>
 
 Говорю на языке бизнеса и не перегружаю терминами — слово «маршрутизация» не прозвучит, пока вы сами не попросите. 😊
 
