--- a/_posts/2025-01-07-project.md
+++ b/_posts/2025-01-07-project.md
@@ -6,11 +6,11 @@ title_clickable: false
 ---
 
 <div class="step-flow" role="list" aria-label="Как проходит проект">
-  <div class="step" role="listitem">Разбираем проблему и ограничения.</div>
-  <div class="step" role="listitem">Предлагаем несколько вариантов «по карману».</div>
+  <div class="step" role="listitem">Разбираем проблему</div>
+  <div class="step" role="listitem">Предлагаем варианты</div>
   <div class="step" role="listitem">Пишем сервис или выбираем готовое решение.</div>
   <div class="step" role="listitem">Готовим инструкции, обучаем людей.</div>
-  <div class="step" role="listitem">Сопровождаем и следим за стабильностью.</div>
+  <div class="step" role="listitem">Поддерживаем и следим за стабильностью.</div>
   <div class="step step--done" aria-hidden="true">V</div>
 </div>
 
