--- a/_posts/2025-01-07-project.md
+++ b/_posts/2025-01-07-project.md
@@ -10,7 +10,7 @@ title_clickable: false
   <div class="step" role="listitem">Предлагаем варианты</div>
   <div class="step" role="listitem">Пишем сервис или выбираем готовое решение.</div>
   <div class="step" role="listitem">Готовим инструкции, обучаем людей.</div>
-  <div class="step step--done" role="listitem">Поддерживаем и следим за стабильностью.</div>
+  <div class="step" role="listitem">Поддерживаем и следим за стабильностью.</div>
 </div>
 
 Говорю на языке бизнеса и не перегружаю терминами — слово «маршрутизация» не прозвучит, пока вы сами не попросите. 😊
