--- a/_posts/2025-01-09-hi.md
+++ b/_posts/2025-01-09-hi.md
@@ -7,6 +7,6 @@ title_clickable: false
 
 Меня зовут Алексей
 
-Разрабатываю веб-сервисы и интеграции. 💻
+Разрабатываю веб-сервисы и интеграции 💻
 
 15 лет в ИТ, 10 лет в разработке ПО.
