--- a/_posts/2025-01-09-hi.md
+++ b/_posts/2025-01-09-hi.md
@@ -9,4 +9,4 @@ title_clickable: false
 
 Разрабатываю веб-сервисы и интеграции 💻
 
-15 лет в ИТ, 10 лет в разработке ПО.
+15 лет занимаюсь разработкой и поддержкой ПО.
