--- a/_posts/2025-01-09-hi.md
+++ b/_posts/2025-01-09-hi.md
@@ -5,8 +5,6 @@ highlight: true
 title_clickable: false
 ---
 
-Меня зовут Алексей
+Меня зовут Алексей, студия разработки `<AB/>` 👨‍💻
 
-Разрабатываю веб-сервисы и интеграции 💻
-
-15 лет занимаюсь разработкой и поддержкой ПО.
+Разрабатываю веб-сервисы и интеграции. 15 лет занимаюсь разработкой и поддержкой ПО. 💻
