--- a/_posts/2025-01-09-hi.md
+++ b/_posts/2025-01-09-hi.md
@@ -7,4 +7,6 @@ title_clickable: false
 
 Меня зовут Алексей, студия разработки `<AB/>` 👨‍💻
 
-Разрабатываю веб-сервисы и интеграции. 15 лет занимаюсь разработкой и поддержкой ПО. 💻
+Разрабатываю веб-сервисы и интеграции. 
+
+15 лет занимаюсь разработкой и поддержкой ПО. 💻
