--- a/_posts/2025-01-07-project.md
+++ b/_posts/2025-01-07-project.md
@@ -6,7 +6,7 @@ title_clickable: false
 ---
 
 <div class="step-flow" role="list" aria-label="Как проходит проект">
-  <div class="step" role="listitem"><a href="/contacts">Опишите задачу на почту</a></div>
+  <div class="step" role="listitem"><a href="/contacts">Опишите задачу на почту&nbsp;<span class="contact-badge">@</span></a></div>
   <div class="step" role="listitem">Разбираем проблему</div>
   <div class="step" role="listitem">Предлагаем варианты</div>
   <div class="step" role="listitem">Пишем сервис или выбираем готовое решение.</div>
