--- a/_posts/2025-01-09-hi.md
+++ b/_posts/2025-01-09-hi.md
@@ -5,7 +5,7 @@ highlight: true
 title_clickable: false
 ---
 
-Меня зовут Алексей, студия разработки **<AB/>** 👨‍💻
+Меня зовут Алексей, студия разработки **&lt;AB/&gt;** 👨‍💻
 
 Разрабатываю веб-сервисы и интеграции. 
 
